# labelme

xinetzone/: READM.md  main.ipynb  pyproject.toml  test.py
xinetzone/src/labelme/: __init__.py  __main__.py  app.py  label_file.py  qt_utils.py  shape.py  testing.py
xinetzone/src/labelme/ai/: _utils.py  text_to_annotation.py
xinetzone/src/labelme/cli/: draw_json.py  draw_label_png.py
xinetzone/src/labelme/utils/: qt.py  shape.py
xinetzone/src/labelme/widgets/: __init__.py  ai_prompt_widget.py  brightness_contrast_dialog.py  canvas.py  color_dialog.py  escapable_qlist_widget.py  file_dialog_preview.py  label_dialog.py  label_list_widget.py  tool_bar.py  unique_label_qlist_widget.py  zoom_widget.py
xinetzone/tests/: a.py  analogclock.py  c.py  main.ipynb  main.py  main2.py  painter.py  rect.py  rect_main.py  screenshot.py
xinetzone/tests/viewer/: a.py  imageviewer.py
xinetzone/viewer/: main.py  painter.py
